<resources>
    <string name="app_name">Vocabulary</string>

    <string name="text1">VOCABULARY</string>
    <string name="button1">VIEW WORDS</string>
    <string name="button2">ADD WORD</string>

    <string name="editText3">word</string>
    <string name="editText4">make a sentence using word</string>
    <string name="button5">ADD</string>
    <string name="button6">MEANING</string>

    <string name="textView">WORDS</string>

    <string name="tv_word">words</string>
    <string name="tv_edit">sentence</string>
    <string name="editSentence">edit the sentence</string>
    <string name="edit">EDIT</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>


</resources>
