<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.raza.vocabulary.Main4Activity">

    <TextView
        android:text="@string/tv_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/tv_word"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tv_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:id="@+id/tv_edit"
        android:textSize="24sp"
        android:layout_below="@+id/tv_word"
        android:layout_alignParentStart="true"
        android:minLines="2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editSentence"
        android:textSize="24sp"
        android:layout_below="@+id/tv_edit"
        android:layout_alignParentStart="true"
        android:hint="@string/editSentence" />


    <Button
        android:text="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_edit"
        android:layout_marginTop="71dp"
        android:layout_below="@+id/tv_edit"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:layout_alignBaseline="@+id/btn_edit"
        android:layout_alignBottom="@+id/btn_edit"
        android:layout_toEndOf="@+id/btn_edit"
        android:layout_marginStart="15dp" />

    <Button
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_delete"
        android:layout_below="@+id/tv_edit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="142dp" />

</RelativeLayout>
