<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.raza.vocabulary.Main2Activity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:id="@+id/editText3"
        android:hint="@string/editText3"
        tools:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_marginTop="33dp"
        android:id="@+id/editText4"
        android:hint="@string/editText4"
        android:maxLines="6"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:minLines="3" />

    <Button
        android:text="@string/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="35dp"
        android:id="@+id/button5"
        android:layout_below="@+id/editText4"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button6"
        android:text="@string/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button5"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="57dp" />
</RelativeLayout>
